RbA Build/src/objects/Grille_Pattern_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Grille_Pattern__c</fullName>
        <label>Grille Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>Colonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Prairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renaissance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunburst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Hub Sunburst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gothic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grille_Style__c</fullName>
        <label>Grille Style</label>
        <picklist>
            <picklistValues>
                <fullName>No Grilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grilles Between Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Wood Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Wood and GBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simulated Divided Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Divided Light</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Height_Fraction__c</fullName>
        <label>Min Height Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Height_Inches__c</fullName>
        <label>Min Height Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Width_Fraction__c</fullName>
        <label>Min Width Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Width_Inches__c</fullName>
        <label>Min Width Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Grille Pattern Configurations</relationshipLabel>
        <relationshipName>Grille_Pattern_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sash_Ratio__c</fullName>
        <label>Sash Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Grille Pattern Configuration</label>
    <nameField>
        <displayFormat>GPC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grille Pattern Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>